--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
 		"url": "https://github.com/Microsoft/vscode-extension-samples"
 	},
 	"dependencies": {
+		"@stylexjs/shared": "^0.4.1",
 		"color-name": "^2.0.0",
 		"culori": "^3.3.0",
 		"vscode-languageserver": "^9.0.1",
