fix: use __dirname for resolving wasm binary path

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "onLanguage:javascript",
     "onLanguage:typescript",
     "onLanguage:javascriptreact",
-    "onLanguage:typescriptreact"
+    "onLanguage:typescriptreact",
+    "*"
   ],
   "main": "./client/out/extension",
   "contributes": {
