fix: reference keyframes in animationName

--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/preset-typescript": "^7.23.3",
     "@stylexjs/babel-plugin": "^0.4.1",
+    "@stylexjs/open-props": "^0.4.1",
     "@stylexjs/shared": "^0.4.1",
     "@types/babel__core": "^7.20.5",
     "color-name": "^2.0.0",
