chore: licenses and pkg jsons

--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,13 @@
 {
   "name": "stylex-language-client",
   "description": "VSCode part of a language server",
-  "author": "Microsoft Corporation",
+  "author": "Yash Singh",
   "license": "MIT",
   "version": "0.0.1",
   "publisher": "vscode",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Microsoft/vscode-extension-samples"
+    "url": "https://github.com/Yash-Singh1/stylex-lsp-vscode"
   },
   "engines": {
     "vscode": "^1.75.0"
