--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "stylex-lsp",
   "description": "Language Server Protocol for StyleX",
-  "author": "Microsoft Corporation",
+  "author": "Yash Singh",
   "license": "MIT",
   "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Microsoft/vscode-extension-samples"
+    "url": "https://github.com/Yash-Singh1/stylex-lsp-vscode"
   },
   "publisher": "Yash-Singh1",
   "categories": [],
