--- a/server/package.json
+++ b/server/package.json
@@ -17,16 +17,16 @@
     "@stylexjs/babel-plugin": "^0.4.1",
     "@stylexjs/open-props": "^0.4.1",
     "@stylexjs/shared": "^0.4.1",
-    "@types/babel__core": "^7.20.5",
     "color-name": "^2.0.0",
     "culori": "^3.3.0",
     "vscode-languageserver": "^9.0.1",
+    "@swc/wasm-web": "^1.3.102",
     "vscode-languageserver-textdocument": "^1.0.11"
   },
   "scripts": {},
   "devDependencies": {
-    "@swc/wasm-web": "^1.3.102",
     "@types/color-name": "^1.1.3",
-    "@types/culori": "^2.0.4"
+    "@types/culori": "^2.0.4",
+    "@types/babel__core": "^7.20.5"
   }
 }
