chore: smaller build by ignoring unused

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -7,11 +7,20 @@
 CONTRIBUTING.md
 .travis.yml
 node_modules/**
+client/node_modules/**
 !client/node_modules/vscode-jsonrpc/**
 !client/node_modules/vscode-languageclient/**
 !client/node_modules/vscode-languageserver-protocol/**
 !client/node_modules/vscode-languageserver-types/**
 !client/node_modules/{minimatch,brace-expansion,concat-map,balanced-match}/**
 !client/node_modules/{semver,lru-cache,yallist}/**
+server/node_modules/**
 !server/node_modules/@stylexjs/**
+!server/node_modules/@swc/**
 !assets/**
+*.vsix
+scripts/
+tsup.config.ts
+.prettierrc
+.eslintignore
+.eslintrc.js
