--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@swc/wasm-web": "^1.3.102",
     "color-name": "^2.0.0",
     "culori": "^3.3.0",
+    "prettier": "^3.1.1",
     "vscode-languageserver": "^9.0.1",
     "vscode-languageserver-textdocument": "^1.0.11"
   },
