--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "color-name": "^2.0.0",
     "culori": "^3.3.0",
     "prettier": "^3.1.1",
+    "vscode-css-languageservice": "^6.2.11",
     "vscode-languageserver": "^9.0.1",
     "vscode-languageserver-textdocument": "^1.0.11"
   },
