--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
-    "compile:client": "tsc -p ./client",
+    "compile:client": "cd client/; tsup; cd ..",
     "compile:server": "tsup server/src/server.ts --no-splitting --out-dir server/out",
     "compile": "concurrently \"npm run compile:client\" \"npm run compile:server\"",
     "watch": "concurrently \"tsc -w -p ./client\" \"tsup server/src/server.ts --no-splitting --out-dir server/out --watch --ignore-watch client\"",
