--- a/package.json
+++ b/package.json
@@ -92,7 +92,8 @@
     "watch": "concurrently \"tsc -w -p ./client\" \"tsup server/src/server.ts --no-splitting --out-dir server/out --watch --ignore-watch client\"",
     "lint": "eslint ./client/src ./server/src --ext .ts,.tsx && prettier --check \"**/*.{ts,tsx,js,json,md}\"",
     "postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
-    "test": "sh ./scripts/e2e.sh",
+    "//test": "sh ./scripts/e2e.sh",
+    "test": "cd server; npm run test; cd ..",
     "type-check": "tsc -p ./client --noEmit && tsc -p ./server --noEmit && tsc -p . --noEmit",
     "code-style": "prettier --write \"**/*.{ts,tsx,js,json,md}\""
   },
