--- a/server/package.json
+++ b/server/package.json
@@ -26,11 +26,14 @@
     "vscode-languageserver": "^9.0.1",
     "vscode-languageserver-textdocument": "^1.0.11"
   },
-  "scripts": {},
+  "scripts": {
+    "test": "vitest run"
+  },
   "devDependencies": {
     "@swc/types": "^0.1.5",
     "@types/babel__core": "^7.20.5",
     "@types/color-name": "^1.1.3",
-    "@types/culori": "^2.0.4"
+    "@types/culori": "^2.0.4",
+    "vitest": "^1.2.0"
   }
 }
