--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,9 +7,9 @@
     "sourceMap": true,
     "strict": true,
     "outDir": "out",
-    "rootDir": "src",
+    "rootDir": ".",
     "skipLibCheck": true
   },
-  "include": ["src"],
+  "include": ["src", "tests"],
   "exclude": ["node_modules", ".vscode-test"]
 }
