--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,14 +23,14 @@ jobs:
         with:
           node-version: 18.x
 
-      - name: Install pnpm dependencies
+      - name: Install npm dependencies
         run: npm install
 
       - name: Lint code
         run: npm run lint
 
       - name: Build code
-        run: npm run build
+        run: npm run compile
 
       - name: Run type checks
         run: npm run type-check
