--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Intellisense for StyleX inside Visual Studio Code",
   "author": "Yash Singh",
   "license": "MIT",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "icon": "assets/stylexlogo.png",
   "repository": {
     "type": "git",
@@ -113,9 +113,11 @@
     "mkdirp": "^3.0.1",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.2",
-    "prettier": "^3.2.2",
-    "tsup": "^8.0.1",
     "typescript": "^5.3.3",
     "vsce": "^2.15.0"
+  },
+  "dependencies": {
+    "prettier": "^3.2.2",
+    "tsup": "^8.0.1"
   }
 }
