--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,16 @@
     "type": "git",
     "url": "https://github.com/Yash-Singh1/stylex-vscode"
   },
-  "dependencies": {
+  "dependencies": {},
+  "scripts": {
+    "test": "vitest run"
+  },
+  "devDependencies": {
+    "@swc/types": "^0.1.5",
+    "@types/babel__core": "^7.20.5",
+    "@types/color-name": "^1.1.3",
+    "@types/culori": "^2.0.4",
+    "vitest": "^1.2.0",
     "@babel/preset-typescript": "^7.23.3",
     "@stylexjs/babel-plugin": "^0.4.1",
     "@stylexjs/open-props": "^0.4.1",
@@ -25,15 +34,5 @@
     "vscode-css-languageservice": "^6.2.11",
     "vscode-languageserver": "^9.0.1",
     "vscode-languageserver-textdocument": "^1.0.11"
-  },
-  "scripts": {
-    "test": "vitest run"
-  },
-  "devDependencies": {
-    "@swc/types": "^0.1.5",
-    "@types/babel__core": "^7.20.5",
-    "@types/color-name": "^1.1.3",
-    "@types/culori": "^2.0.4",
-    "vitest": "^1.2.0"
   }
 }
