--- a/server/package.json
+++ b/server/package.json
@@ -17,20 +17,21 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "@swc/types": "^0.1.5",
-    "@types/babel__core": "^7.20.5",
-    "@types/color-name": "^1.1.3",
-    "@types/culori": "^2.0.4",
-    "vitest": "^1.2.0",
     "@babel/preset-typescript": "^7.23.3",
     "@stylexjs/babel-plugin": "^0.4.1",
     "@stylexjs/open-props": "^0.4.1",
     "@stylexjs/shared": "^0.4.1",
     "@swc/core": "^1.3.102",
+    "@swc/types": "^0.1.5",
     "@swc/wasm-web": "^1.3.102",
+    "@types/babel__core": "^7.20.5",
+    "@types/color-name": "^1.1.3",
+    "@types/culori": "^2.0.4",
     "color-name": "^2.0.0",
     "culori": "^3.3.0",
+    "intl-segmenter-polyfill": "^0.4.4",
     "prettier": "^3.2.1",
+    "vitest": "^1.2.0",
     "vscode-css-languageservice": "^6.2.11",
     "vscode-languageserver": "^9.0.1",
     "vscode-languageserver-textdocument": "^1.0.11"
