--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "package": "vsce package --baseImagesUrl https://stylexvscode.pages.dev/",
     "//test": "sh ./scripts/e2e.sh",
     "test": "cd server; npm run test; cd ..",
-    "type-check": "tsc -p ./client --noEmit && tsc -p ./server --noEmit && tsc -p . --noEmit",
+    "type-check": "tsc -p ./client --noEmit && tsc -p ./server --noEmit && tsc -p ./server/tsconfig.tests.json --noEmit",
     "code-style": "prettier --write \"**/*.{ts,tsx,js,json,md}\""
   },
   "devDependencies": {
