--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,5 @@
     "sourceMap": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", ".vscode-test", "scripts"],
-  "references": [{ "path": "./client" }, { "path": "./server" }]
+  "exclude": ["node_modules", ".vscode-test", "scripts", "server", "client"]
 }
