--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,10 @@
       "request": "launch",
       "name": "Launch Client",
       "runtimeExecutable": "${execPath}",
-      "args": ["--extensionDevelopmentPath=${workspaceRoot}"],
+      "args": [
+        "${input:testLocation}",
+        "--extensionDevelopmentPath=${workspaceRoot}"
+      ],
       "outFiles": [
         "${workspaceRoot}/client/out/**/*.js",
         "${workspaceRoot}/server/out/**/*.cjs"
@@ -29,6 +32,14 @@
         "${workspaceRoot}/client/testFixture"
       ],
       "outFiles": ["${workspaceRoot}/client/out/test/**/*.js"]
+    }
+  ],
+  "inputs": [
+    {
+      "id": "testLocation",
+      "description": "Absolute path to directory where you want to debug extension",
+      "default": "./sandbox",
+      "type": "promptString"
     }
   ]
 }
