--- a/package.json
+++ b/package.json
@@ -107,14 +107,14 @@
     "@types/node": "^18.14.6",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
+    "@vscode/vsce": "^2.23.0",
     "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "mkdirp": "^3.0.1",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.2",
-    "typescript": "^5.3.3",
-    "vsce": "^2.15.0"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "prettier": "^3.2.2",
