--- a/package.json
+++ b/package.json
@@ -73,6 +73,11 @@
           "default": true,
           "description": "Enable/disable whether the editor should render color decorators for styles."
         },
+        "stylex.inspectPort": {
+          "type": ["number", "null"],
+          "default": null,
+          "markdownDescription": "Port that will be used for Node.js debugger connections for the language server. Debugging is disabled by default."
+        },
         "stylex.trace.server": {
           "scope": "window",
           "type": "string",
